--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Lincx by shivarammysore</title>
+    <title>Lincx by FlowForwarding</title>
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/shivarammysore/lincx">View on GitHub</a>
+    <a id="forkme_banner" href="https://github.com/FlowForwarding/lincx">View on GitHub</a>
     <div class="shell">
 
       <header>
@@ -37,7 +37,7 @@
 
       <section id="downloads">
         <span class="inner">
-          <a href="https://github.com/shivarammysore/lincx/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/shivarammysore/lincx/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+          <a href="https://github.com/FlowForwarding/lincx/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/FlowForwarding/lincx/tarball/master" class="tgz"><em>download</em> .TGZ</a>
         </span>
       </section>
 
@@ -47,15 +47,15 @@
 
       <section id="main_content">
         <h1>
-<a name="linc---openflow-software-switch" class="anchor" href="#linc---openflow-software-switch"><span class="octicon octicon-link"></span></a>LINC - OpenFlow software switch</h1>
+<a name="lincx---openflow-software-switch" class="anchor" href="#lincx---openflow-software-switch"><span class="octicon octicon-link"></span></a>LINCX - OpenFlow software switch</h1>
 
 <h2>
-<a name="what-is-linc" class="anchor" href="#what-is-linc"><span class="octicon octicon-link"></span></a>What is LINC?</h2>
+<a name="what-is-lincx" class="anchor" href="#what-is-lincx"><span class="octicon octicon-link"></span></a>What is LINCX?</h2>
 
-<p>LINC is a pure OpenFlow software switch written in Erlang. It's implemented in
-operating system's userspace as an Erlang node. Such approach is not the most
-efficient one, but it gives a lot of flexibility and allows quick development
-and testing of new OpenFlow features.</p>
+<p>LINCX is a pure OpenFlow software switch written in Erlang. It runs within a
+separate domain under Xen hypervisor using LING (erlangonxen.org).</p>
+
+<p>LINCX is a new faster version of <a href="https://github.com/FlowForwarding/LINC-Switch">LINC-SWitch</a>.</p>
 
 <h3>
 <a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features</h3>
@@ -69,71 +69,12 @@ and testing of new OpenFlow features.</p>
 <a name="how-to-use-it" class="anchor" href="#how-to-use-it"><span class="octicon octicon-link"></span></a>How to use it?</h2>
 
 <h3>
-<a name="erlang" class="anchor" href="#erlang"><span class="octicon octicon-link"></span></a>Erlang</h3>
+<a name="prerequisites" class="anchor" href="#prerequisites"><span class="octicon octicon-link"></span></a>Prerequisites</h3>
 
-<p>To use LINC you need to have an Erlang runtime installed on your
-machine. Required version is <strong>R15B+</strong>.</p>
-
-<h4>
-<a name="install-from-sources" class="anchor" href="#install-from-sources"><span class="octicon octicon-link"></span></a>Install from sources</h4>
-
-<p>To build Erlang from sources first you have to install some required system
-packages.</p>
-
-<p>On Ubuntu:</p>
-
-<pre><code># apt-get install gcc wget make autoconf openssl libssl0.9.8 libssl-dev libncurses5 libncurses5-dev
-</code></pre>
-
-<p>On RedHat/CentOS:</p>
-
-<pre><code># yum install gcc wget make autoconf openssl openssl-devel ncurses ncurses-devel
-</code></pre>
-
-<p>On other Linux systems you need to install the counterparts of aforementioned packages.</p>
-
-<p>When your system environment is ready download the sources from <a href="http://www.erlang.org/download.html">erlang.org</a>. Unpack, compile and install:</p>
-
-<pre><code>% ./configure
-% make
-# make install
-</code></pre>
-
-<h4>
-<a name="install-from-binaries" class="anchor" href="#install-from-binaries"><span class="octicon octicon-link"></span></a>Install from binaries</h4>
-
-<p>If you're lazy you can also use <a href="http://www.erlang-solutions.com/section/132/download-erlang-otp">Erlang binary packages</a> created by <a href="http://www.erlang-solutions.com">Erlang Solutions</a>.</p>
-
-<h3>
-<a name="linc" class="anchor" href="#linc"><span class="octicon octicon-link"></span></a>LINC</h3>
-
-<p>To build the switch you need to install the following additional libraries and
-tools.</p>
-
-<p>On Ubuntu:</p>
-
-<pre><code># apt-get install git-core bridge-utils libpcap0.8 libpcap-dev libcap2-bin uml-utilities
-</code></pre>
-
-<p>On RedHat/CentOS:</p>
-
-<pre><code># yum install git sudo bridge-utils libpcap libpcap-devel libcap tunctl
-</code></pre>
-
-<p>Note that on RedHat/CentOS 5.x you need a newer version of libpcap:</p>
-
-<pre><code># yum erase libpcap libpcap-devel
-# yum install flex byacc
-# wget http://www.tcpdump.org/release/libpcap-1.2.1.tar.gz
-# tar xzf libpcap-1.2.1.tar.gz
-# cd libpcap-1.2.1
-# ./configure
-# make &amp;&amp; make install
-</code></pre>
-
-<p>On other Linux systems you need to install the counterparts of aforementioned packages.</p>
-
-<p>When your environment is set up you are ready to build and run LINC.</p>
+<ul>
+<li>Erlang/OTP R16B01</li>
+</ul><h3>
+<a name="lincx" class="anchor" href="#lincx"><span class="octicon octicon-link"></span></a>LINCX</h3>
 
 <p>Clone this git repository:</p>
 
@@ -142,78 +83,38 @@ tools.</p>
 
 <p>Compile everything:</p>
 
+<pre><code>% ./rebar get-deps
+% ./rebar compile
+</code></pre>
+
+<p>Create a LING configuration file:</p>
+
+<pre><code>% cp LINGConfig.mk.sample LINGConfig.mk
+</code></pre>
+
+<p>Edit LINGConfig.mk as needed.</p>
+
+<p>Create the switch configuration file:</p>
+
+<pre><code>% cp priv/sys.config.sample priv/sys.config
+</code></pre>
+
+<p>Edit you priv/sys.config file.</p>
+
+<p>Build the Xen image for the switch:</p>
+
 <pre><code>% make
 </code></pre>
 
-<p>Adjust switch configuration by editing the <code>rel/linc/releases/0.1/sys.config</code> file which looks like this:</p>
+<p>Boot the lincx Xen domain:</p>
 
-<pre><code>{linc,
- [
-  {of_config, enabled},
-  {capable_switch_ports,
-   [
-    {port, 1, [{interface, "eth0"}]},
-    {port, 2, [{interface, "tap0"}]}
-   ]},
-  {logical_switches,
-   [
-    {switch, 0,
-     [
-      {backend, linc_us4},
-      {controllers,
-       [
-        {"Switch0-DefaultController", "localhost", 6633, tcp}
-       ]},
-      {queues_status, disabled},
-      {ports,
-       [
-        {port, 1, {queues, []}},
-        {port, 2, {queues, []}}
-       ]}
-     ]}
-   ]}
- ]}.
+<pre><code>% sudo make boot
 </code></pre>
-
-<p>At the moment you can change the list of controllers and ports used by the
-switch.</p>
-
-<p>Start LINC switch in <code>console</code> mode:</p>
-
-<pre><code>% rel/linc/bin/linc console
-</code></pre>
-
-<p>For further instructions on how to use LINC check the
-"<a href="https://github.com/FlowForwarding/LINC-Switch/tree/master/docs/example-ping.md">Ping example</a>".</p>
-
-<p>For detailed explanation on how to setup simple LINC testbed check the
-"<a href="https://github.com/FlowForwarding/LINC-Switch/tree/master/docs/testbed-setup.md">Testbed setup</a>".</p>
-
-<h2>
-<a name="development-environment" class="anchor" href="#development-environment"><span class="octicon octicon-link"></span></a>Development environment</h2>
-
-<p>To facilitate developing LINC application the appropriate environment was prepared. It consists of the following components:</p>
-
-<ol>
-<li>"<a href="https://github.com/mentels/sync">Sync</a>" - scans all the <strong>beam</strong> files and their corresponding source files and reloads or recompiles them respectively if necessary.</li>
-<li>"<a href="https://github.com/tjarvstrand/edts">EDTS</a>" - Emacs mode that among others provides automatic files compilation, finding function declaration etc. For this to work you have to configure your emacs to use EDTS.</li>
-<li>Makefile targets - start the development Erlang VM.</li>
-</ol><p>Assuming that you have Emacs and EDTS installed and properly configured, to start developing LINC you have follow these steps:</p>
-
-<ol>
-<li>Clone the repo.</li>
-<li>Enter the project root dir and issue:
-make dev_prepare
-If you get and error saying "beam.smp executable not found!" follow the guidelines and export the BEAMSMP_PATH variable pointing to your <code>beam.smp</code> and run the make target againg.</li>
-<li>By default only the <code>procket</code> module is excluded from scanning by Sync. If you want to prevent additional modules from being scanned modify sync configuration in <code>rel/files/sys.config</code> file.</li>
-<li>Next start the development Erlang VM:
-make dev</li>
-</ol><p>Now you can develop the LINC application without restarting the Erlang VM.</p>
 
 <h2>
 <a name="support" class="anchor" href="#support"><span class="octicon octicon-link"></span></a>Support</h2>
 
-<p>If you have any technical questions, problems or suggestions regarding LINC
+<p>If you have any technical questions, problems or suggestions regarding LINCX
 please send them to <a href="mailto:linc-dev@flowforwarding.org">linc-dev@flowforwarding.org</a> mailing list or create an
 Issue. Thanks.</p>
       </section>
@@ -221,7 +122,7 @@ Issue. Thanks.</p>
       <footer>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/shivarammysore">shivarammysore</a> can be found on <a href="https://github.com/shivarammysore/lincx">GitHub</a></p>
+            <p>this project by <a href="https://github.com/FlowForwarding">FlowForwarding</a> can be found on <a href="https://github.com/FlowForwarding/lincx">GitHub</a></p>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
